# c_common

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/: allocator.h  arena.h  array.h  config.h  list.h  malloc.h  str.h
src/: allocator.c  arena.c  malloc.c  str.c
test/: CMakeLists.txt
test/src/: test_allocator.c
